fixes, scrollbar removed, first axis labels

--- a/olympics-va/src/app/conf/conf.component.css
+++ b/olympics-va/src/app/conf/conf.component.css
@@ -20,7 +20,7 @@ div.scroll
 {
 height:"100%";
 margin: "10px";
-overflow:scroll;
+overflow:auto;
 float: "none";
 }
 
